--- a/website/src/components/SidebarMenu/SidebarMenu.module.scss
+++ b/website/src/components/SidebarMenu/SidebarMenu.module.scss
@@ -45,7 +45,7 @@
         }
 
         & > *:nth-child(2) {
-            padding-top: 0;
+            padding-top: 0.5em;
         }
 
         & > * {
